--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "cSpell.words": ["cleansheets", "recordstats", "viewmembers"]
+  "cSpell.words": [
+    "bundesliga",
+    "cleansheets",
+    "Copa",
+    "copadel",
+    "Coppa",
+    "coupedefrance",
+    "liga",
+    "ligue",
+    "Pokal",
+    "recordstats",
+    "serie",
+    "viewmembers"
+  ]
 }
